<resources>
    <string name="app_name">Трекер привычек</string>
    <string name="alalal">Приветик</string>
    <string name="text_name_habit">Название привычки</string>
    <string name="text_description">Описание</string>
    <string name="text_priority">Приоритет</string>
    <string name="radio_good_habit">Хорошая</string>
    <string name="radio_bad_habit">Плохая</string>
    <string name="text_type">Тип привычки</string>
    <string-array name="priorities">
        <item>Высокий</item>
        <item>Средний</item>
        <item>Низкий</item>
    </string-array>
</resources>